Fix CC serialization issues caused by AccessTracking classes
They or their views can be used wholesale as task inputs, so they must
be CC-serializable to some extent. Prior to this commit we were trying
to serialize the getenv() result or views, like keySet(), as beans and
failed because of non-serializable lambdas or JDK-internal classes
inside.

This commit doesn't make the lambda serializable, but instead
introduces serialization doubles. For starters, serializing the map or
its view means that we're making everything a CC input. This means we
don't need to track accesses in the deserialized value, and thus we can
just store the contents, with some workarounds for CC serialization
quirks.

We have to add another --add-opens because of
System.getProperties().getEntries(). Serializing the entries requires
accessing the private ConcurrentHashMap.MapEntry class.

--- a/.teamcity/subprojects.json
+++ b/.teamcity/subprojects.json
@@ -647,7 +647,7 @@
     "name": "input-tracking",
     "path": "platforms/core-configuration/input-tracking",
     "unitTests": true,
-    "functionalTests": false,
+    "functionalTests": true,
     "crossVersionTests": false
   },
   {
